Disabled export menu options when no view is selected.

--- a/Resources/DatasetWindow.xib
+++ b/Resources/DatasetWindow.xib
@@ -1021,7 +1021,7 @@
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
 																		<int key="NSCellFlags">75628096</int>
 																		<int key="NSCellFlags2">2048</int>
-																		<string key="NSContents">Title</string>
+																		<string key="NSContents">Dataset</string>
 																		<object class="NSFont" key="NSSupport" id="26">
 																			<string key="NSName">LucidaGrande</string>
 																			<double key="NSSize">11</double>
