Removed Covariance Initialization methods from view and code.

--- a/Plugins/Clusterers/GMM/DivvyGMM.xib
+++ b/Plugins/Clusterers/GMM/DivvyGMM.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
@@ -180,21 +180,15 @@
                 <popUpButton verticalHuggingPriority="750" id="ASm-uI-8Ux">
                     <rect key="frame" x="157" y="210" width="126" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <popUpButtonCell key="cell" type="push" title="All" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="gWR-Ox-okN" id="9yL-Hc-Jtf">
+                    <popUpButtonCell key="cell" type="push" title="Closest" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="La4-js-wcr" id="9yL-Hc-Jtf">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
                         <menu key="menu" title="OtherViews" id="Roh-1J-L0f">
                             <items>
-                                <menuItem title="Closest" id="La4-js-wcr">
+                                <menuItem title="Closest" state="on" id="La4-js-wcr">
                                     <modifierMask key="keyEquivalentModifierMask"/>
                                 </menuItem>
-                                <menuItem title="All" state="on" id="gWR-Ox-okN">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                                <menuItem title="Random" id="xMf-Ag-WrM">
-                                    <modifierMask key="keyEquivalentModifierMask"/>
-                                </menuItem>
-                                <menuItem title="Uniform" id="yXl-9x-dl8">
+                                <menuItem title="All" id="gWR-Ox-okN">
                                     <modifierMask key="keyEquivalentModifierMask"/>
                                 </menuItem>
                             </items>
